# wallaby2caom2

./: Dockerfile  README.md  setup.cfg  setup.py
blank2caom2/tests/: test_main_app.py
blank2caom2/tests/data/: config.yml
config/: config.yml  state.yml
scripts/: config.yml  docker-entrypoint.sh  fix_release_dates.py  wallaby_run.sh  wallaby_run_remote.sh
wallaby2caom2/: __init__.py  composable.py  data_source.py  fits2caom2_augmentation.py  fix_product_id_visit.py  main_app.py  metadata.py  position_bounds_augmentation.py  preview_augmentation.py  quality_augmentation.py  scrape.py  storage_name.py  time_bounds_augmentation.py
wallaby2caom2/tests/: conftest.py  test_caom_gen_visit.py  test_composable.py  test_data_source.py  test_main_app.py  test_make_time_data.py  test_metadata.py  test_obs_plane_rename_visit.py  test_preview_augmentation.py  test_scrape.py  test_storage_name.py  test_validator.py  test_vlass_visitors.py
wallaby2caom2/tests/data/: VLASS1.1.T01t01.J000228-363000.xml  VLASS1.1.T10t12.J075402-033000.xml  VLASS1.1.T10t12.J075402-033000r.in.xml  VLASS1.1.T10t12.J075402-033000r.xml  VLASS1.1.T29t05.J110448+763000.xml  VLASS1.1.cc.T29t05.J110448+763000.10.2048.v1.fits.header  VLASS1.1.ql.T01t01.J000228-363000.10.2048.v1.I.iter1.image.pbcor.tt0.rms.subim.fits.header  VLASS1.1.ql.T01t01.J000228-363000.10.2048.v1.I.iter1.image.pbcor.tt0.subim.fits.header  VLASS1.1.ql.T10t12.J075402-033000.10.2048.v1.I.iter1.image.pbcor.tt0.rms.subim.fits.header  VLASS1.1.ql.T10t12.J075402-033000.10.2048.v1.I.iter1.image.pbcor.tt0.subim.fits.header  VLASS1.1.ql.T10t12.J075402-033000.10.2048.v2.I.iter1.image.pbcor.tt0.rms.subim.fits.header  VLASS1.1.ql.T10t12.J075402-033000.10.2048.v2.I.iter1.image.pbcor.tt0.subim.fits.header  VLASS1.1.ql.T29t05.J110448+763000.10.2048.v1.I.iter1.image.pbcor.tt0.rms.subim.fits.header  VLASS1.1.ql.T29t05.J110448+763000.10.2048.v1.I.iter1.image.pbcor.tt0.subim.fits.header  VLASS1.2.T07t14.J084202-123000.xml  VLASS1.2.ql.T07t14.J084202-123000.10.2048.v1.I.iter1.image.pbcor.tt0.rms.subim.fits.header  VLASS1.2.ql.T07t14.J084202-123000.10.2048.v1.I.iter1.image.pbcor.tt0.subim.fits.header  WALLABY_J100342-270136.expected.xml  WALLABY_J100342-270136_FittedData_v2.fits.header  WALLABY_J100342-270136_v2.expected.xml  WALLABY_J100342-270137.expected.xml  all_fields_list.html  (+17 more)
(+31 files in other folders)
